# canopy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: canopy-prompt-reviewer.md
.claude/hooks/: auto-install.sh  checkpoint-reminder.sh  push-reminder.sh
canopy-cli/: Cargo.toml
canopy-cli/src/: adr_wizard.rs  build_output.rs  cli.rs  dependency_gate.rs  fix_loop.rs  main.rs  project_scan.rs  review_log.rs  roots.rs  shell.rs  tdd.rs  ui.rs  util.rs
canopy-cli/src/commands/: behaviors.rs  dependencies.rs  domain.rs  init.rs  intent.rs  mod.rs  scaffold.rs  spec.rs  stories.rs  try_tools.rs
canopy-cli/src/commands/implement/: execute.rs  mod.rs  plan.rs
canopy-core/: Cargo.toml
canopy-core/src/: adr_merge.rs  lib.rs  named_described.rs  tech_family.rs
canopy-explore/: Cargo.toml
canopy-explore/src/: lib.rs
canopy-llm/: Cargo.toml
canopy-llm/examples/: contract_driven_stage1_experiment.rs  contract_driven_stage2_experiment.rs  contract_driven_stage3_experiment.rs  contract_driven_stage5_experiment.rs  contract_driven_stage6_composition_check.rs  contract_isolation_probe.rs  pre_behavior_reproducibility_sweep.rs  return_request_materialize_persona.rs  return_request_persona_experiment.rs  role_meaning_value_experiment.rs  stage4_dry_run_verification.rs
canopy-llm/src/: client.rs  lib.rs  repair.rs  tech.rs  tools.rs
canopy-llm/src/prompts/: behaviors.rs  clustering.rs  contract_plan.rs  contracts.rs  decisions.rs  dependencies.rs  fix.rs  intent.rs  mod.rs  plan.rs  scaffold.rs  spec.rs  step.rs  summary.rs  yaml_util.rs
canopy-llm/src/skills/: architecture.rs  build_system.rs  file_targets.rs  mod.rs  tech_stack.rs  testing.rs
canopy-storage/: Cargo.toml
canopy-storage/src/: lib.rs
docs/: contract-readiness-assessment.md  github-readiness-assessment.md  github-readiness-checklist.md  knowledge-taxonomy.md  narrative-analysis.md  theme-analysis.md
docs/blog-drafts/: every-example-noun-is-a-candidate-answer.md  policy-discovery-vs-policy-invention.md  the-same-fix-rediscovered-two-weeks-apart.md  two-of-three-runs-invented-a-field-we-never-asked-for.md  we-deleted-the-llm-call-and-replaced-it-with-a-template.md  why-we-replaced-holistic-review-with-enumeration.md
docs/design/: backlog-discovery-corrected-intervention.md  backlog-discovery-first-learning-iteration.md  behavior-first-planning.md  canopy-assisted-domain-exploration-vision.md  classification-vs-authorship-evidence.md  codebase-architecture-assessment.md  contract-composition-assessment.md  contract-driven-implementation-experiment.md  domain-boundary-hypothesis-assessment.md  domain-event-decision-point-criteria-comparison.md  domain-exploration-mvp-design.md  exploration-as-backlog-discovery-hypothesis.md  exploration-enumeration-gap-investigation.md  exploration-output-consumability-properties.md  exploration-phase-first-principles-reassessment.md  human-insight-inventory-rerun.md  human-insight-inventory.md  human-insight-process-experiment-design.md  human-insight-process-experiment-phase2-results.md  human-insight-process-experiment-phase3-results.md  mechanism-b-implementation-evaluation.md  minimal-experiment-audit.md  missing-concern-categories-inventory.md  operational-fact-collection-strategies.md  operational-facts-worth-establishing.md  pre-behavior-planning-reproducibility-sweep.md  pre-behavior-planning-review.md  product-010-reassessed-with-confirmed-public-browsing-intent.md  product-010-story-readiness-failure-diagnosis.md  product-owner-perspective-experiment.md  roadmap-reassessment.md  role-classification-stability-test.md  role-meaning-capture-validation-experiment.md  role-meaning-collapses-to-classification.md  role-meaning-collection-strategy-narrowing.md  role-meaning-fact-shape-critique.md  role-meaning-final-recommendation.md  role-meaning-minimal-fact-content.md  role-meaning-value-chain-evidence-map.md  role-meaning-value-experiment-results.md  (+9 more)
docs/narratives/: from-prompt-engineering-to-mechanical-facts.md  from-stories-to-behaviors.md  how-reproducibility-became-first-class.md  the-emergence-of-decision-points.md  the-evolution-of-canopys-stated-purpose.md  the-road-to-contracts.md
docs/open-questions/: domain-boundary-explicitness.md  pre-behavior-planning-review.md  role-semantics-explicitness.md  story-readiness-vs-backlog-evolution.md
docs/principles/: compute-facts-mechanically.md  contracts-are-intent-roots-is-reality.md  coverage-should-be-generated-not-discovered.md  cross-artifact-consistency-audits-prevent-drift.md  deterministic-audits-vs-compensation.md  exhaustive-enumeration-over-holistic-review.md  freeze-the-established-spec.md  implementation-ownership-requires-full-file-scope-visibility.md  reserve-the-model-for-genuine-ambiguity.md  structure-emerges-from-behavior.md  (+1 more)
roots-cli/: Cargo.toml
roots-cli/src/: config.rs  db.rs  discover.rs  main.rs  output.rs
roots-cli/src/commands/: callees.rs  callers.rs  context.rs  deps.rs  dump.rs  facts.rs  graph.rs  impact.rs  index.rs  init.rs  mod.rs  query.rs  status.rs  symbol.rs  workspace.rs
roots-context/: Cargo.toml
roots-context/src/: error.rs  facts.rs  feature.rs  file.rs  impact.rs  lib.rs  packet.rs  project.rs  symbol.rs
roots-core/: Cargo.toml
roots-core/src/: error.rs  lib.rs  project.rs  relationship.rs  symbol.rs  workspace.rs
roots-parser/: Cargo.toml
roots-parser/src/: dispatch.rs  extractor.rs  java.rs  kotlin.rs  lib.rs  rust.rs  typescript.rs
roots-parser/tests/: java_extract.rs  java_relationships.rs  kotlin_extract.rs  kotlin_relationships.rs  typescript_extract.rs  typescript_relationships.rs
roots-parser/tests/fixtures/: OrderService.java  UserService.kt  notification.ts
roots-storage/: Cargo.toml
roots-storage/src/: error.rs  lib.rs  schema.rs  store.rs
roots-storage/tests/: store_test.rs
(+17 files in other folders)
