[workspace]
members = [
    # Roots — repository intelligence engine
    "roots-core",
    "roots-parser",
    "roots-storage",
    "roots-context",
    "roots-cli",
    # Canopy — planning and implementation orchestrator
    "canopy-core",
    "canopy-storage",
    "canopy-llm",
    "canopy-cli",
]
resolver = "2"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
