[package]
name = "canopy-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
canopy-core    = { path = "../canopy-core" }
canopy-llm     = { path = "../canopy-llm" }
canopy-storage = { path = "../canopy-storage" }
roots-context  = { path = "../roots-context" }
roots-storage  = { path = "../roots-storage" }
clap           = { version = "4", features = ["derive"] }
dialoguer      = "0.11"
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
