[package]
name = "canopy-llm"
version = "0.1.0"
edition = "2021"
description = "LLM client, prompts, and generation functions for Canopy's planning pipeline"
license.workspace = true

[dependencies]
canopy-core = { path = "../canopy-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["json"] }
thiserror = "1"
