[package]
name = "canopy-storage"
version = "0.1.0"
edition = "2021"
description = "Save/load persistence layer for Canopy's .canopy/ project artifacts"
license.workspace = true

[dependencies]
canopy-core = { path = "../canopy-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
