[package]
name    = "roots-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roots"
path = "src/main.rs"

[dependencies]
roots-core    = { path = "../roots-core" }
roots-parser  = { path = "../roots-parser" }
roots-storage = { path = "../roots-storage" }
roots-context = { path = "../roots-context" }
clap          = { version = "4", features = ["derive"] }
serde         = { workspace = true }
serde_json    = { workspace = true }
walkdir       = "2"
thiserror     = { workspace = true }
toml          = "0.8"

[dev-dependencies]
tempfile = "3"
