[package]
name    = "roots-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
roots-core           = { path = "../roots-core" }
tree-sitter          = "0.24"
tree-sitter-java     = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-kotlin   = { git = "https://github.com/fwcd/tree-sitter-kotlin", rev = "c8ac3d2627240160b999a2c100de3babbdb8f419" }
streaming-iterator   = "0.1"
thiserror            = { workspace = true }
