[package]
name    = "roots-storage"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed graph persistence for Roots"
license.workspace = true

[dependencies]
roots-core = { path = "../roots-core" }
rusqlite   = { version = "0.40", features = ["bundled"] }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
